tests/snapshots/run_wpt_conformance__trtx_conv2d_default___hardSwish.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "subgraph.https.any.js",
    "conv2d default + hardSwish",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
