tests/snapshots/run_wpt_conformance__trtx_conv2d_default___linear.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "conv2d default + linear",
    "trtx",
    "PASS",
)
